--- a/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.scss
+++ b/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.scss
@@ -41,6 +41,9 @@
     }
     &__information {
         &--drag {
+            #element-drag{
+                height: 100px;
+            }
             .content-drag {
                 //cursor: pointer;
                 width: 100%;
@@ -69,6 +72,10 @@
                 align-items: center;
                 flex-direction: column;
               }
+            .show-list-name-class{
+                display: inline-block; 
+                margin-bottom: 15px;
+            }
             .show-list-name-class:nth-last-child(4) {
                 //float: left;
                 margin-right: 11px;
@@ -580,6 +587,32 @@
       }
     }
 }
+@media screen and (min-height:630px) and (max-height:780px) {
+    .sample-contract{
+      height: calc(100vh - 260px);
+      &__information{
+        &--drag{
+          #element-drag{
+            height: 80px;
+          }
+          .show-list-name-class{
+            #element-drag{
+              margin-bottom: 1px;
+            }
+          }
+        }
+        &--user-sign {
+          label {
+            padding-bottom: 1px;
+          }
+        }
+        .location-change {
+          height: 150px;
+          overflow: auto;
+        }
+      }
+    }
+  }
 
 // @media screen and (min-width:1824px) {
 //     .sample-contract{
