--- a/src/app/main/contract-signature/shared/model/edit-handler-dialog/edit-handler-dialog.component.html
+++ b/src/app/main/contract-signature/shared/model/edit-handler-dialog/edit-handler-dialog.component.html
@@ -1,16 +1,17 @@
+<div class="contract-determine">
 <div class="contract__content--participants">
 <div class="participants-border">
     <div class="label">{{'update.person-process' | translate}}</div>
-    <div class="participants--content"  *ngFor="let d of getOriganzationSignature(); let index = index">
+    <!-- <div class="participants--content"  *ngFor="let d of getOriganzationSignature(); let index = index">
         <div class="label">{{'update.person-process' | translate}}</div>
-    </div>
-    <div class="participants--content" *ngFor="let d of getOriganzationSignature(); let index = index">
+    </div> -->
+    <div class="participants--content">
 
-      <input [id]="'ordering-sign-' + index" class="col-md-1 contract-total"
-        (focusout)="onChangeValue($event,'ordering-sign-' + index)" style="width: 25px; height: 25px"
-        type="number" [(ngModel)]="d.ordering"
+      <!-- <input [id]="'ordering-sign-'" class="col-md-1 contract-total"
+        (focusout)="onChangeValue($event,'ordering-sign-')" style="width: 25px; height: 25px"
+        type="number"
         oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
-        [disabled]="getOriganzationSignature().length == 1">
+        [disabled]="getOriganzationSignature().length == 1"> -->
         
       <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
 
@@ -20,7 +21,7 @@
             <div class="label_detail text-color">
 
               <div>
-                <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailOrgSigner_{{index}}" [value]="email" [(ngModel)]="d.login_by"/>
+                <input type="radio" name="checkPhoneMailOrgSigner_" [value]="email"/>
               </div>&nbsp;
               <div>
                 {{'typeOfSignEmail' | translate}}
@@ -30,7 +31,7 @@
           <div class="participants__name">
             <div class="label_detail text-color">
               <div>
-                <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailOrgSigner_{{index}}" [(ngModel)]="d.login_by" [value]="phone"/>
+                <input type="radio" name="checkPhoneMailOrgSigner_" [value]="phone"/>
               </div>&nbsp;
               <div>
                 {{'typeOfSignPhone' | translate}}
@@ -47,24 +48,20 @@
               <img src="assets/img/icon_name.svg" class="input-img">
 
               <!--Trường hợp typeOfSignEmail-->
-              <input *ngIf="d.login_by === 'email'" type="text" placeholder="{{'nhap_ho_va_ten' | translate}}"
-                (focusin)="onFocusIn($event, index, 'signature')"
-                (ngxInputSearch)="doTheSearch($event, index, 'signature')" [(ngModel)]="d.name"
-                (focusout)="onFocusOut($event, d)">
+              <input type="text" placeholder="{{'nhap_ho_va_ten' | translate}}"
+                
+                >
 
                 <!--Trường hợp typeOfSignPhone-->
-              <input *ngIf="d.login_by === 'phone'" type="text" placeholder="{{'nhap_ho_va_ten' | translate}}"
-              (focusin)="onFocusIn($event, index, 'signature')"
-              [(ngModel)]="d.name"
-              (focusout)="onFocusOut($event, d)">
+              <!-- <input  type="text" placeholder="{{'nhap_ho_va_ten' | translate}}"/> -->
+              
             </div>
 
-            <div class="search-name"
-              *ngIf="this.arrSearch[index] && this.arrSearchNameSignature && arrSearchNameSignature.length > 0">
+            <!-- <div class="search-name">
               <button class="search-name-items" *ngFor="let t of this.arrSearchNameSignature"
-                (click)="onSelectName(t, d)">{{t.name}} ({{t.email}})
+               >{{t.name}} ({{t.email}})
               </button>
-            </div>
+            </div> -->
           </div>
 
           <div class="participants__name">
@@ -73,13 +70,13 @@
 
             <!--Tổ chức của tôi chọn loại ký-->
             <ng-multiselect-dropdown 
-              [(ngModel)]="d.sign_type" 
+             
               placeholder="{{'choose' | translate }}"
               [settings]="dropdownSignTypeSettings" 
               [data]="isListSignNotPerson" 
               (onSelect)="onItemSelect($event, data_organization.name)"
               (onDeSelect)="deSelectOrg($event)"
-              (ngModelChange)="selectWithOtp($event, d, 'organization')"
+              
             >
               <ng-template #optionsTemplate let-item let-option="option" let-id="id" let-isSelected="isSelected">
                 <div style="padding: 1px 10px; margin-right: 10px; right: 2px; top: -2px;">
@@ -94,44 +91,45 @@
         </div>
 
         <div class="participants--input" style="display: flex">
-          <div *ngIf="d.login_by === 'email'" class="participants__name" style="width: 90%">
+          <div  class="participants__name" style="width: 90%">
             <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
             <div class="input-data">
               <img src="assets/img/login_email.svg" class="input-img">
-              <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="d.email">
+              <input type="text" placeholder="{{'nhap_email' | translate}}" >
             </div>
           </div>
 
-          <div *ngIf="d.login_by === 'phone'" class="participants__name" style="width: 90%">
+          <!-- <div class="participants__name" style="width: 90%">
             <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;<span class="required-title">*</span></div>
             <div class="input-data">
               <img class="input-img">
-              <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
+              <input type="text" placeholder="{{'nhap_sdt' | translate}}" >
             </div>
-          </div>
+          </div> -->
         </div>
 
         <!--trường hiển thị khi người ký tổ chức của tôi chọn loại ký là usbtoken-->
-        <div class="participants--input" style="display: flex" *ngIf="getDataSignUSBToken(d).length > 0">
+        <!-- <div class="participants--input" style="display: flex" >
           <div class="participants__name" style="width: 90%">
             <div class="label_detail text-color">{{'tax_code.cardId' | translate}}&nbsp;<span class="required-title">*</span><div style="color: #ffc107;">({{'info.token' | translate}})</div></div>
             <div class="input-data">
-              <input type="text" placeholder="{{'enter.tax_code.cardId' | translate}}" [(ngModel)]="d.card_id" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
+              <input type="text" placeholder="{{'enter.tax_code.cardId' | translate}}"  oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
             </div>
           </div>
-        </div>
+        </div> -->
 
         <!--trường hiển thị khi người ký tổ chức của tôi chọn loại ký là hsm-->
-        <div class="participants--input" style="display: flex" *ngIf="getDataSignHsm(d).length > 0">
+        <!-- <div class="participants--input" style="display: flex" >
           <div class="participants__name" style="width: 90%">
             <div class="label_detail text-color">{{'tax_code' | translate}}&nbsp;<span class="required-title">*</span></div>
             <div class="input-data">
-              <input type="text" placeholder="{{'enter.tax.code' | translate}}" [(ngModel)]="d.card_id" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
+              <input type="text" placeholder="{{'enter.tax.code' | translate}}"  oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
             </div>
           </div>
-        </div>
+        </div> -->
 
       </div>
 
   </div>
+</div>
 </div>
