--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -3,12 +3,12 @@
 
 <div class="sample-contract row" *ngIf="loaded && valid && this.mobile === false">
 
-  <!-- <div>
-    <button id="prev">Previous</button>
+  <div>
+    <button (click)="previousPage()" id="prev">Previous</button>
     <button (click)="onNextPage()" id="next">Next</button>
     &nbsp; &nbsp;
-    <span>Page: <span id="page_num"></span> / <span id="page_count"></span></span>
-  </div> -->
+    <input />
+  </div>
 
   <div class="col-md-3 sample-contract__information" style="background-color: white;">
     <div class="sample-contract__information--drag" id="width-element-info" style="margin-top: 15px">
