--- a/src/app/main/contract-signature/components/footer-signature/footer-signature.component.scss
+++ b/src/app/main/contract-signature/components/footer-signature/footer-signature.component.scss
@@ -51,3 +51,11 @@
   background: rgb(46, 108, 246); 
   color: rgb(255, 255, 255);
 }
+
+.call-page {
+  padding: 0;border: none;background: none;
+}
+
+.call-page1 {
+  padding: 0;border: none;background: none; margin-left: 5px
+}
