--- a/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.scss
+++ b/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.scss
@@ -612,7 +612,13 @@
         }
       }
     }
-  }
+}
+
+.center {
+  text-align: center;
+}
+
+
 
 // @media screen and (min-width:1824px) {
 //     .sample-contract{
