--- a/src/app/main/contract-template/detail-contract-template/detail-contract-template.component.html
+++ b/src/app/main/contract-template/detail-contract-template/detail-contract-template.component.html
@@ -48,7 +48,7 @@
   
     <!--  file content-->
     <!--  width: 74.7%-->
-    <div class="col-md-9 sample-contract__file viewer-pdf isDrag"
+    <div (scroll)="scroll($event)" id="pdf-full" class="col-md-9 sample-contract__file viewer-pdf isDrag"
          style="background-color: #F2F2F2; position: relative;">
       <div id="pdf-viewer-step-3">
         <div *ngFor="let d of this.convertToSignConfig()" class="show-list-name-drag" [style.width]="this.canvasWidth">
@@ -65,7 +65,39 @@
       </div>
     </div>
   </div>
-  </ng-template>
+
+  <div class="footer-sample-contract">
+    <div class="col-md-3">
+    </div>
+    <div class="col-md-9">
+        <div class="center">
+            <a>
+                <button class="call-page" (click)="firstPage()">
+                  <img *ngIf="this.page1" src="assets/img/previousbold.svg">
+                  <img *ngIf="!this.page1" src="assets/img/firstpage.svg">
+                </button>
+                <button class="call-page1" (click)="previousPage()">
+                  <img *ngIf="this.page1" src="assets/img/firstpagebold.svg">
+                  <img *ngIf="!this.page1" src="assets/img/previous.svg">
+                </button>
+          
+                <input [(ngModel)]="pageNum" style="box-sizing: border-box;width: 50px;height: 30px;background: #FFFFFF;border: 1px solid #87CAFF;border-radius: 5px; margin-left: 5px" type="text" (keyup.enter)="onEnter($event)" />
+                <a style="font-family: 'Lexend Deca';font-style: normal;font-weight: 400;font-size: 18px;line-height: 22px;align-items: center;text-transform: uppercase;color: #000000;margin-left: 5px">/{{this.pageNumber}}</a>
+                <button class="call-page1" (click)="onNextPage()" id="prev">
+                  <img *ngIf="this.pageLast" src="assets/img/next.svg">
+                  <img *ngIf="!this.pageLast" src="assets/img/nextblur.svg">
+                </button>
+          
+                <button class="call-page1" (click)="lastPage()" id="prev">
+                  <img *ngIf="this.pageLast" src="assets/img/lastpage.svg">
+                  <img *ngIf="!this.pageLast" src="assets/img/lastpageblur.svg">
+                </button>
+            </a>
+        </div>
+    </div>
+  </div>
+</ng-template>
 
 
   <div>{{roleMess | translate}}</div>
+
