--- a/src/app/main/contract/detail-contract/detail-contract.component.html
+++ b/src/app/main/contract/detail-contract/detail-contract.component.html
@@ -56,10 +56,9 @@
 
   <!--  file content-->
   <!--  width: 74.7%-->
-  <div *ngIf="!this.mobile" class="col-md-9 sample-contract__file viewer-pdf isDrag"
+  <div (scroll)="scroll($event)" id="pdf-full" *ngIf="!this.mobile" class="col-md-9 sample-contract__file viewer-pdf isDrag"
        style="background-color: #F2F2F2; position: relative;">
     <div id="pdf-viewer-step-3">
-      
     </div>
   </div>
 
@@ -72,16 +71,38 @@
     ></pdf-viewer>
   </div>
 </div>
-<div class="footer-contract">
 
-  <div class="btn_footer">
-    <div class="label">
-    </div>
-    <div class="label" *ngIf="role || this.status == 30">
-      <button  type="button" name="next" class="next action-button" *ngIf="view && loaded && status != 4" (click)="downloadContract(idContract)">{{checkStatusUser(status, role) | translate}}</button>
-
-      <button  type="button" name="next" class="next action-button1" *ngIf="view && loaded && status == 4" (click)="downloadContract(idContract)">{{checkStatusUser(status, role) | translate}}</button>
-
-    </div>
+<div class="footer-sample-contract">
+  <div class="col-md-3">
+  </div>
+  <div class="col-md-9">
+      <div class="center">
+          <a>
+              <button class="call-page" (click)="firstPage()">
+                <img *ngIf="this.page1" src="assets/img/previousbold.svg">
+                <img *ngIf="!this.page1" src="assets/img/firstpage.svg">
+              </button>
+              <button class="call-page1" (click)="previousPage()">
+                <img *ngIf="this.page1" src="assets/img/firstpagebold.svg">
+                <img *ngIf="!this.page1" src="assets/img/previous.svg">
+              </button>
+        
+              <input [(ngModel)]="pageNum" style="box-sizing: border-box;width: 50px;height: 30px;background: #FFFFFF;border: 1px solid #87CAFF;border-radius: 5px; margin-left: 5px" type="text" (keyup.enter)="onEnter($event)" />
+              <a style="font-family: 'Lexend Deca';font-style: normal;font-weight: 400;font-size: 18px;line-height: 22px;align-items: center;text-transform: uppercase;color: #000000;margin-left: 5px">/{{this.pageNumber}}</a>
+              <button class="call-page1" (click)="onNextPage()" id="prev">
+                <img *ngIf="this.pageLast" src="assets/img/next.svg">
+                <img *ngIf="!this.pageLast" src="assets/img/nextblur.svg">
+              </button>
+        
+              <button class="call-page1" (click)="lastPage()" id="prev">
+                <img *ngIf="this.pageLast" src="assets/img/lastpage.svg">
+                <img *ngIf="!this.pageLast" src="assets/img/lastpageblur.svg">
+              </button>
+          </a>
+          <a style="position: absolute; right: 5px;">
+            <button  type="button" name="next" class="next action-button" *ngIf="view && loaded && status != 4" (click)="downloadContract(idContract)">{{checkStatusUser(status, role) | translate}}</button>
+            <button  type="button" name="next" class="next action-button1" *ngIf="view && loaded && status == 4" (click)="downloadContract(idContract)">{{checkStatusUser(status, role) | translate}}</button>      
+          </a>
+      </div>
   </div>
 </div>
