--- a/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.scss
+++ b/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.scss
@@ -391,3 +391,16 @@
 .center {
   text-align: center;
 }
+
+.call-page {
+  padding: 0;
+  border: none;
+  background: none;
+}
+
+.call-page1 {
+  padding: 0;
+  border: none;
+  background: none; 
+  margin-left: 5px
+}
