--- a/src/app/main/contract-type/add-contract-type/add-contract-type.component.html
+++ b/src/app/main/contract-type/add-contract-type/add-contract-type.component.html
@@ -28,6 +28,23 @@
                 </div>
             </div>
         </div>
+
+        <div class="row" style="padding-top: 10px;">
+            <div class="col-md-12">
+                <div class="label text-color">{{'contract-type.ceca' | translate}} <span class="required-title">*</span></div>
+
+                <div class="row" style="justify-content: center;padding-top: 10px;">
+                    <div class="col-md-3" style="text-align: center;">
+                        <input type="radio" name="confirm-radio-consider" [value]="1" formControlName="ceca_push" name="ceca_push">
+                        <span> {{'yes' | translate}}</span>
+                    </div>
+                    <div class="col-md-3" style="text-align: center;">
+                        <input type="radio" name='confirm-radio-consider' [value]="0" formControlName="ceca_push" name="ceca_push">
+                        <span> {{'no' | translate}}</span>
+                    </div>
+                </div>
+            </div>
+        </div>
     
         <div class="row" style="justify-content: center;padding-top: 10px;">
             <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'btn.cancel' | translate}}</button>
