--- a/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
+++ b/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
@@ -48,6 +48,13 @@
           id="" cols="30" rows="10"></textarea>
       </div>
     </div>
+
+    <div class="form-group">
+      <div class="label_item">{{'contract-type.ceca' | translate}}</div>
+        <p-dropdown panelStyleClass="font" [options]="optionsCeCa" [(ngModel)]="optionsCeCaValue" optionLabel="name"
+          optionValue="id" placeholder="{{'choose.contract.type' | translate}}" [showClear]="true">
+        </p-dropdown>
+    </div>
   </div>
 
   <div class="col-md-2"></div>
@@ -63,7 +70,7 @@
     <div class="form-group">
       <div class="label_item">{{'contract.type' | translate}}</div>
       <div>
-        <p-dropdown panelStyleClass="font" [options]="typeList" [(ngModel)]="datasForm.type_id" optionLabel="name"
+        <p-dropdown (onChange)="changeTypeContract()" panelStyleClass="font" [options]="typeList" [(ngModel)]="datasForm.type_id" optionLabel="name"
           optionValue="id" placeholder="{{'choose.contract.type' | translate}}" [filter]="true" filterBy="name" [showClear]="true"
           ></p-dropdown>
       </div>
