--- a/src/app/main/contract/detail-contract/detail-contract.component.html
+++ b/src/app/main/contract/detail-contract/detail-contract.component.html
@@ -76,7 +76,7 @@
   <div class="col-md-3">
   </div>
   <div class="col-md-9">
-      <div class="center">
+      <div *ngIf="!this.mobile" class="center">
           <a>
               <button class="call-page" (click)="firstPage()">
                 <img *ngIf="this.page1" src="assets/img/previousbold.svg">
