--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -129,8 +129,37 @@
         style="width: 95%; height: calc(70vh); border: 1px;"
         [fit-to-page]="true"
         [show-borders]="true"
+        [show-all]="true"
+        [(page)]="pageMobile"
+        [stick-to-page]="true"
+        (after-load-complete)="afterLoadComplete($event)"
         ></pdf-viewer>
       </div>
+
+    <div class="flex-column" style="text-align: center">
+    <!-- <a style="text-align: center;"> -->
+      <button class="call-page" (click)="firstPageMobile()">
+        <img *ngIf="this.page1" src="assets/img/previousbold.svg">
+        <img *ngIf="!this.page1" src="assets/img/firstpage.svg">
+      </button>
+      <button class="call-page1" (click)="previousPageMobile()">
+        <img *ngIf="this.page1" src="assets/img/firstpagebold.svg">
+        <img *ngIf="!this.page1" src="assets/img/previous.svg">
+      </button>
+
+      <input class="input-mobile" [(ngModel)]="pageNum" type="text" />
+      <a class="page-number-mobile">/{{this.pageNumber}}</a>
+      <button class="call-page1" id="prev">
+        <img *ngIf="this.pageLast" src="assets/img/next.svg">
+        <img *ngIf="!this.pageLast" src="assets/img/nextblur.svg">
+      </button>
+
+      <button class="call-page1" id="prev">
+        <img *ngIf="this.pageLast" src="assets/img/lastpage.svg">
+        <img *ngIf="!this.pageLast" src="assets/img/lastpageblur.svg">
+      </button>
+    <!-- </a> -->
+    </div>
 
       <div style="display: none;" *ngFor="let d of this.convertToSignConfig()" class="show-list-name-drag" [style.width]="this.canvasWidth">
         <app-image-sign-contract id="image-sign-contract-mobile" *ngIf="![2,3].includes(recipient.status)" [datas]="datas" [view]="[2,3].includes(recipient.status)" [sign]="d"></app-image-sign-contract>
