--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.scss
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.scss
@@ -315,9 +315,42 @@
   color: rgb(255, 255, 255);
 }
 
-canvas{
-  position: fixed;
-  top: 0;
-  left: 0;
-  transform: translateZ(0);
+.call-page {
+  padding: 0;
+  border: none;
+  background: none;
+}
+
+.call-page1 {
+  padding: 0;
+  border: none;
+  background: none; 
+  margin-left: 5px
+}
+
+.input-mobile {
+  box-sizing: border-box;
+  width: 50px;
+  height: 30px;
+  background: #FFFFFF;
+  border: 1px solid #87CAFF;
+  border-radius: 5px; 
+  margin-left: 5px;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px;
+  font-family: 'Lexend Deca'
+}
+
+.page-number-mobile {
+  font-family: 'Lexend Deca';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  align-items: center;
+  text-transform: uppercase;
+  color: #000000;
+  margin-left: 5px
 }
