--- a/src/app/main/contract-signature/components/footer-signature/footer-signature.component.scss
+++ b/src/app/main/contract-signature/components/footer-signature/footer-signature.component.scss
@@ -53,9 +53,15 @@
 }
 
 .call-page {
-  padding: 0;border: none;background: none;
+  padding: 0;
+  border: none;
+  background: none;
 }
 
 .call-page1 {
-  padding: 0;border: none;background: none; margin-left: 5px
+  padding: 0;
+  border: none;
+  background: none; 
+  margin-left: 5px
 }
+
