--- a/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.html
+++ b/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.html
@@ -139,9 +139,7 @@
                 </button>
               </a>
             <a style="position: absolute; right: 5px;">
-                <button (click)="next('save_draft')" type="button" name="saveDocument" class="next action-button"
-                style="background-color: #FCAF17">{{'btn.save-draft' | translate}}</button>
-                <button (click)="next('next_step')" type="button" name="next" class="next action-button">{{'btn.next' | translate}}</button>
+                <button (click)="submit()" type="button" name="next" class="next action-button">{{'btn.next' | translate}}</button>
             </a>
         </div>
     </div>
